fixing work images on mobile

--- a/src/Work/ExpandableCard/styles.css
+++ b/src/Work/ExpandableCard/styles.css
@@ -37,8 +37,9 @@
 .projectPoint {
   width: 10px;
   height: 10px;
-  margin: 5px;
-  margin-bottom: 5px;
+  padding: 6px;
+  box-sizing: border-box;
+  margin: 5px 0;
   background-color: white;
   border-radius: 50%;
   transition: 1s;
@@ -65,7 +66,7 @@
   }
 }
 
-.activeImageHadChaged {
+.activeImageHadChanged {
   animation-name: out-and-back;
   animation-duration: 0.5s;
   animation-delay: 0s;
@@ -213,8 +214,21 @@
     flex-wrap: wrap;
   }
 
+  .pointsContainer {
+    top: 100px;
+    right: 20px;
+  }
+
+  .projectContent h2 {
+    margin: 20px 0;
+  }
+
   .projectListImgContainer {
     display: none;
+  }
+
+  .projectList {
+    max-width: 100%;
   }
 
   .imgContainer {
@@ -226,11 +240,11 @@
   .imgContainer img {
     max-width: 350px;
   }
-}
 
-@media screen and (max-width: 375px) {
-  .isImageExpanded {
-    min-width: 450px;
-    margin-left: -73px;
+  .isCardExpanded {
+    max-width: initial !important;
+    width: min(40rem, 95%) !important;
+    height: calc(100% - 10rem) !important;
+    max-height: initial !important;
   }
 }
